--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,5 +50,6 @@
     },
     "editor.defaultFormatter": "xaver.clang-format",
     "clang-format.executable": "/usr/bin/clang-format",
-    "editor.formatOnSave": false
+    "editor.formatOnSave": false,
+    "clang-format.style": "{ IndentWidth: 4 }"
 }
