--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
     "editor.defaultFormatter": "xaver.clang-format",
     "clang-format.executable": "/usr/bin/clang-format",
     "editor.formatOnSave": false,
-    "clang-format.style": "{ IndentWidth: 4 }"
+    "clang-format.style": "{ BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 100 }"
 }
